# Pure-RISCV32I-Assembler

./: Cargo.toml  README.md  input.txt
assembler/src/: code_generation.rs  convert_bytes.rs  lexical_analysis.rs  main.rs  opcode.rs  parser.rs  structures.rs  symbol_resolution.rs  symbol_table.rs  syntax_analysis.rs  tokenizer.rs  tokens.rs
src/: auxiliar.rs  lib.rs  main.rs  pipeline.rs  structures.rs  utils.rs
src/auxiliar/: convertion.rs  error.rs  instruction.rs  operands.rs  token.rs
src/pipeline/: _1_lexical_analysis.rs  _2_symbol_resolution.rs  _3_syntax_analysis.rs  _4_code_generation.rs  _5_byte_conversion.rs  _5_byte_convertion.rs  code_generation.rs  convert_bytes.rs  lexical_analysis.rs  symbol_resolution.rs  syntax_analysis.rs
src/structures/: error.rs  instruction.rs  token.rs
src/utils/: convertion.rs  error.rs  instruction.rs  operands.rs  parsing.rs  token.rs
tests/: instruction_specific.rs  program_wide.rs
