[package]
name = "pure-rv32i"
version = "0.1.0"
authors = ["Jeronimo Capelle <jero.capelle@gmail.com>"]
edition = "2024"
description = "A purist, zero-dependency RISC-V 32I assembler built in Rust."
readme = "README.md"
repository = "https://github.com/JeronimoCapelle/Pure-RISCV32I-Assembler"
license = "CC0-1.0"
keywords = ["parser", "cli", "terminal","rust", "embedded"]
categories = ["command-line-utilities","embedded","development-tools","encoding","parser-implementations"]

format_code_in_doc_comments = true
group_imports = "StdExternalCrate"
reorder_impl_items = true

[dependencies]

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

unwrap_used = "forbid"
expect_used = "forbid"
panic = "forbid"
todo = "forbid"
unimplemented = "forbid"
unreachable = "forbid" 


as_conversions = "deny"
clone_on_ref_ptr = "forbid"       
str_to_string = "deny"         
alloc_instead_of_core = "deny" 
std_instead_of_core = "deny"

arithmetic_side_effects = "deny"
float_cmp_const = "forbid"         

print_stdout = "forbid"        
print_stderr = "forbid"       
dbg_macro = "forbid"          

missing_docs_in_private_items = "warn" 
unseparated_literal_suffix = "forbid"  
too_many_lines = "deny"


[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = true


[profile.dev.package."*"]
opt-level = 3


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
debug = "line-tables-only"
strip = "none"
debug-assertions = false
overflow-checks = false

[profile.max-perf]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = "symbols"